# SevenNet

./: .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  _7net.code-workspace  logo_ascii  patch_lammps.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  pytests.yaml  pytests.yml  test.yml
SevenNet_0/: README  fine_tune.yaml
SevenNet_0/parallel_model/: deployed_parallel_0.pt  deployed_parallel_1.pt  deployed_parallel_2.pt  deployed_parallel_3.pt  deployed_parallel_4.pt
SevenNet_0/serial_model/: deployed_serial.pt
docs/: requirements.txt
docs/source/: applications.rst  cite.md  conf.py  index.rst  install.md  install.rst  lammps_mliap.md  pretrained.md  pretrained.rst  usage.md
example_inputs/: input.yaml
example_inputs/EWC/: README
example_inputs/md_parallel_example/: deployed_parallel_0.pt  deployed_parallel_1.pt  deployed_parallel_2.pt  deployed_parallel_3.pt  in.lmp
example_inputs/md_serial_example/: deployed_serial.pt  dump.traj  in.lmp  log.lammps
example_inputs/training/: input.yaml  input_full.yaml  structure_list
pair_e3gnn/: comm_brick.cpp  comm_brick.h  pair_e3gnn.cpp  pair_e3gnn.h  pair_e3gnn_parallel.cpp  pair_e3gnn_parallel.h
pretrained_potentials/SevenNet_0/: README.md  fine_tune.yaml
pretrained_potentials/SevenNet_0__11July2024/: fine_tune.yaml  pre_train.yaml
pretrained_potentials/SevenNet_0__22May2024/: README.md
sevenn/: ._keys.py.swp  .gitignore  .model_build.py.swp  __init__.py  _const.py  _keys.py  atom_graph_data.py  calculator.py  checkpoint.py  deployed_test_2.pt  error_recorder.py  input.yaml  lmp_mliap_wrapper.py  log.lammps  logger.py  logo_ascii  mliap.py  mliap_helper.py  model_build.py  parse_input.py  sevenn_logger.py  sevenn_train_mpi.py  sevennet_calculator.py  torchsim.py  torchsim_d3.py  util.py
sevenn/compile/: _nequip_fx.py  _wrappers.py  aot_inference.py
sevenn/main/: sevenn.py  sevenn_cp.py  sevenn_data.py  sevenn_get_model.py  sevenn_get_parallel.py  sevenn_graph_build.py  sevenn_inference.py  sevenn_patch_lammps.py  sevenn_preset.py
sevenn/nn/: .force_output.py.swp  .node_embedding.py.swp  .scale.py.swp  .self_connection.py.swp  _ghost_exchange.py  activation.py  convolution.py  cue_helper.py  edge_embedding.py  equivariant_gate.py  equivariant_product_basis.py  flash_helper.py  force_output.py  ghost_control.py  grads_calc.py  interaction_blocks.py  linear.py  node_embedding.py  oeq_helper.py  scale.py  self_connection.py  sequential.py  util.py
sevenn/pair_e3gnn/: README.md  comm_brick.cpp  comm_brick.h  comm_brick_cpu.cpp  comm_brick_cpu.h  d3_pars.csv  pair_d3.cu  pair_d3.h  pair_d3_batch.cu  pair_d3_batch.h  pair_d3_for_ase.cu  pair_d3_for_ase.h  pair_d3_for_ts.cu  pair_d3_for_ts.h  pair_d3_pars.h  pair_e3gnn.cpp  pair_e3gnn.h  pair_e3gnn_atomic_stress.cpp  pair_e3gnn_oeq_autograd.cpp  pair_e3gnn_parallel.cpp  pair_e3gnn_parallel.h  pair_e3gnn_parallel_atomic_stress.cpp  pair_e3gnn_parallel_cpu.cpp  pair_e3gnn_parallel_cpu.h  patch_lammps.sh  r0ab.csv
sevenn/presets/: MF_0.yaml  base.yaml  base_v1.yaml  fine_tune.yaml  fine_tune_le.yaml  fine_tune_v1.yaml  mf_ompa_fine_tune.yaml  multi_modal.yaml  sevennet-0.yaml  sevennet-l3i5.yaml
sevenn/pretrained_potentials/: SevenNet_0__11July2024
sevenn/scripts/: .deploy.py.swp  backward_compatibility.py  convert_model_modality.py  deploy.py  graph_build.py  inference.py  inference_test.py  init_dataset.py  plot.py  processing_by_batch.py  processing_continue.py  processing_dataset.py  processing_epoch.py  raw_weight  sevenn_get_parallel.py  sevenn_script.py  train.py
sevenn/train/: .trainer.py.swp  ase_dataset.py  aselmdb_dataset.py  atoms_dataset.py  collate.py  dataload.py  dataset.py  graph_dataset.py  loss.py  modal_dataset.py  optim.py  sampler.py  trainer.py
test_intallation/: checkpoint_best.pth  deployed_model_10.pt  deployed_model_20.pt  deployed_model_best.pt  input.yaml  log.sevenn  loss_hist_best.pth  parity_at_best.pth  saved_dataset.pt  structure_list  train_atom_type_best.pth  train_user_label_best.pth  valid_atom_type_best.pth  valid_user_label_best.pth
test_intallation/md_parallel_example/: POSCAR  deployed_parallel_0.pt  run.sh  (+3 more)
test_yamls/: custom_scale.yaml  input_x_stress.yaml  loss_huber.yaml  parity_false.yaml  species_wise_shift_scale.yaml  species_wise_shift_scale_trainable_custom.yaml  train_shift_scale.yaml  use_bias_in_linear.yaml
tests/: clean.sh  test_all.sh  testbot.py
tutorial/: SevenNet_finetune_tutorial.ipynb  SevenNet_python_tutorial.ipynb  SevenNet_simple_tutorial.ipynb  SevenNet_tutorial_basic.ipynb  SevenNet_tutorial_fine-tuning.ipynb
(+141 files in other folders)
